app/assets/stylesheets/layout.css
#allPhotosGallery * {
    text-align: center;
    margin-right: auto;
    margin-left: auto;
}

#content {
    color: #34495e;
    width: 250px;
    text-align: center;
}

.vote {
    max-width: 70px;
    /*background: white;*/
    border: 0px;
}

.arrow {
    max-width: 40px;
}

.infoboxButton {
    font-size: 18px;
    padding: 5px;
    border-radius: 5px;
    margin: 5px;
}

@media (min-width: 500px) {
    .infoboxButton {
        font-size: 20px;
        padding: 5px;
        border-radius: 5px;
        margin: 5px;
    }

    h1 {
        font-size: 30px;
    }

    #content {
        width: 200px;
    }
}

#infoWindow {
    height: 400px;
    width: 600px;
}

@media (max-width: 500px) {
    #infoWindow {
        height: 400px;
        width: 200px;
    }
}


.bx-viewport {
    max-width: 600px;
}


#icon{
    height: 30px;
    float: right;
    padding-top: 15px;
    padding-right: 20px;
    }


@media (max-width: 600px) {
    #icon {
        height: 35px;
        float: right;
        padding-top: 15px;
        padding-right: 50px;
    }
}

#title {
    padding-right: 10px;
    padding-bottom: 10px;
    float: right;
}


#map-canvas {
    height: 100%;
    margin-top: 50px;
}

#panel {
    position: absolute;
    width: 100%;
    z-index: 1;
    color: white;
    font-size: 16px;
    background: #34495e;
    /*background-color: rgb(250,250,250); opacity: .9;*/
    top: 0px;
    padding-bottom: 10px;
    max-height: 51px;
    clear: both;

}

#panel #title{
    font-size: 20px;
}

#loginDropDown{
    z-index: 50;
    float: left;
}

#menuButton{
    color:white;
    font-size: 20px;
    padding: 5px;
    margin: 10px;
}

.blueOne{
    background-color: #34495e;
    height: 30px;
    padding: 5px;
    margin-right: auto;
    margin-left: auto;
    width: 100px;
    height: 40px;
    color: #191919;
    text-align:center;
    overflow:hidden;
    display: block;

}

.linkText{
    color: white;

}

li .linkText {

    display: block;
    padding: 5px 0 5px 0;
    clear: both;
}


.hoverText{
    color: #e67e22;
}

body{
    font-family:"Lucida Grande", arial, sans-serif;
    /*background: #34495e;*/
    height:100%;
    margin: 0;
    padding: 0;
}



#menuItems{
    margin:0;
    padding:0;
    position: relative;
}

a{
    color:#FFF;
    text-decoration:none;
    /*padding-bottom: 20px;*/
}

.hidden {
    display: none;
}

#content {
    border-radius: 20px;
}

.footer {
  width: 100%;
  height: -50px;
  text-align: center;
  background: rgba(40,40,40,1);
}

.footer p {
  color: white;
  line-height: 50px;
}

